@@ -173,7 +173,7 @@ icpCheckUdpHit(StoreEntry * e, request_t * request)
 	return 0;
     if (Config.onoff.icp_hit_stale)
 	return 1;
-    if (refreshCheck(e, request, 30))
+    if (refreshCheckICP(e, request))
 	return 0;
     return 1;
 }
